# audio_video_dev_codes

./: README.md  local.properties  project_wiki.md  task_list.md
AndroidAVSample/: readme.md  settings.gradle
AndroidAVSample/app/: build.gradle
AndroidAVSample/app/src/main/: AndroidManifest.xml
AndroidAVSample/gradle/: libs.versions.toml
AndroidAVSample/gradle/wrapper/: gradle-wrapper.properties
av_part1/: CMakeLists.txt  README.md  main.c
av_part1/AudioResample/: Demo.c  test_c.c  test_c.h
av_part1/doc/Linux_Basic/: common_cmd.md  install_tools.md  readme.md
av_part1/doc/Linux_Basic/vim/: vim_basic.md
av_part1/doc/audio/: audio_basic.md  audio_codec.md  audio_codec_practice.md  audio_collection.md  audio_how_tobe_sound.md  audio_operator_process.md  audio_raw_data.md  siulation_convert_digital.md  voice_three_elements.md
av_part1/doc/env_basic/: application_scene.md  compiler_ffmpeg_multi_plateform.md  mac_compile_guide.md  push_stream_interupt.md
doc/: section_3.md
doc/audio_wiki/: README.md  part-1.md
doc/audio_wiki/part1/: section-4.md  section_4.html
doc/ffmpeg_wiki/: readme.md
doc/ffmpeg_wiki/build_ffmpeg/: mac_compile_guide.md  readme.md
doc/ffmpeg_wiki/install_ffmpeg/: readme.md
doc/smart_study_av/: readme.md
doc/smart_study_av/chapter_1/: episode_1.md
doc/systematic_study/: readme.md
doc/systematic_study/audio_video_encode/: readme.md  section_1.md  section_2.md  section_3.md  section_4.md
doc/systematic_study/audio_video_format/: flv.md  m3u8.md  mp4.md  readme.md  ts.md
doc/systematic_study/audio_video_protocol/: hls.md  kcp.md  readme.md  rtmp.md
doc/systematic_study/audio_video_render/: readme.md  section_1.md  section_2.md  section_3.md  section_4.md  section_5.md
doc/systematic_study/av_android_demo/: readme.md
doc/systematic_study/av_industry/: readme.md
doc/systematic_study/av_render/: readme.md
doc/systematic_study/av_tools/: data_fetch_packet.md  ffmpeg.md  gui_analyse.md  ios_reverse.md
doc/systematic_study/sound_and_img_basic/: readme.md  section_1.md  section_2.md  section_3.md  section_4.md  section_5.md  section_6.md
doc/video_wiki/: README.md
doc/video_wiki/part1/: README.md
doc/video_wiki/part2/: README.md  section_1.md  section_2.md  section_3.md  section_4.md
ffmpeg_dev/: .gitignore  CMakeLists.txt  README.md  main.c
ffmpeg_dev/SDL/: first.c  sdl_event.c  sdl_texture.c  yuv_player.c
ffmpeg_dev/basic/: cutvideo.c  extr_video.c  extra_audio.c  ffmpeg_file.c  ffmpeg_list.c  log_demo.c  media_info.c
ffmpeg_dev/basic/avformat/: demo_muxing.c
ffmpeg_dev/basic/practice/: extra_audio_tmp.c  log_demo_temp.c  meta_info_temp.c  meta_info_temp.cpp
ffmpeg_dev/basic/v2/5-3/: build.sh  extra_audio  extra_audio_v2.c
ffmpeg_dev/basic/v2/5-4/: build.sh  extra_video_v2.c
ffmpeg_dev/basic/v2/5-5/: build.sh  remux_v2.c
ffmpeg_dev/docs/: 5-11.md  5-14.md  5-16.md  5-3.md  5-4.md  5-6.md  5-7.md  5-8.md  basic.md  ffmpeg_authors.txt
ffmpeg_dev/docs/SDL/: api_wiki.md  compile_and_install.md  readme.md  render_wiki.md  yuv_player.md
ffmpeg_dev/docs/common_command/: readme.md
ffmpeg_dev/docs/encode_decode/: readme.md
ffmpeg_dev/docs/filter/: readme.md
ffmpeg_dev/docs/note/: extro_video.md
ffmpeg_dev/docs/player_core/: readme.md
ffmpeg_dev/docs/using_in_android/: readme.md
ffmpeg_dev/middle/: decode_video.c  encode_audio.c
ffmpeg_dev/work/: copy.c
ffmpeg_dev/work/audio/: 7be17688-1ae2-11e8-b7f2-000c29ffef9b_0.aac
ffmpeg_note/: .gitignore  CMakeLists.txt  README.md  main.c
ffmpeg_note/docs/about_compile/: compiler_ffmpeg_multi_plateform.md  cross_compile_for_android.md  mac_compile_guide.md
ffmpeg_note/docs/about_compile/wins/: vs_msys2.md  windows_compile_ffmpeg.md
ffmpeg_note/docs/part_1/: README.md  ffmpeg_cmd_collections.md
ffmpeg_note/docs/part_1/chapter_1/: 1.1.md  1.2.md  1.3.md  1.4.md  1.5.md  1.6.md  1.8.md  README.md
ffmpeg_note/docs/part_1/chapter_2/: 2.1.md  2.2.md  2.3.md  README.md
ffmpeg_note/docs/part_1/chapter_2/section_1/: 2.1.1.md  2.1.2.md  2.1.3.md  2.1.4.md  2.1.5.md  2.1.6.md
ffmpeg_note/docs/part_1/chapter_2/section_2/: 2.2.show_data.md  2.2.show_format.md  2.2.show_frames.md  2.2.show_packets.md  2.2.show_streams.md
ffmpeg_note/docs/part_1/chapter_2/section_3/: 2.3.1.md  2.3.2.md  2.3.3.md
ffmpeg_note/docs/part_1/chapter_3/: README.md
ffmpeg_note/docs/part_1/chapter_3/section_1/: 3.1.1.md  3.1.2.md  3.1.3.md  3.1.4.md  3.1.md
ffmpeg_note/docs/part_1/chapter_3/section_2/: 3.2.1.md  3.2.2.md  3.2.3.md  3.2.4.md  3.2.5.md  3.2.md
ffmpeg_note/docs/part_1/chapter_3/section_3/: 3.3.1.md  3.3.2.md  3.3.3.md  3.3.md  3.4.2.md  3.4.3.md
ffmpeg_note/docs/part_1/chapter_3/section_4/: 3.4.md
ffmpeg_note/docs/part_1/chapter_3/section_5/: 3.5.md
ffmpeg_note/docs/part_1/chapter_3/section_6/: 3.6.md
ffmpeg_note/docs/part_1/chapter_4/: 4.1.2.1.md  4.1.2.2.md  4.1.2.3.md  4.1.2.4.md  4.1.2.5.md  4.1.2.6.md  4.1.2.md  4.1.md  4.2.1.md  4.2.2.md  4.2.3.md  4.2.4.md  4.2.md  4.3.md  4.4.1.md  4.4.2.md  4.4.3.md  4.4.4.md  4.4.md  4.5.md  README.md
ffmpeg_note/docs/part_1/chapter_5/: 5.1.md  5.2.md  5.3.md  5.4.md  5.5.md  5.6.md  5.7.md  README.md
ffmpeg_note/docs/part_1/chapter_6/: 6.1.md  6.2.md  6.3.md  6.4.md  6.5.1.md  6.5.2.md  6.5.3.md  6.5.4.md  6.5.5.md  6.5.md  README.md
ffmpeg_note/docs/part_1/chapter_7/: README.md
ffmpeg_note/docs/part_2/: README.md
ffmpeg_note/docs/part_2/chapter_10/: README.md
ffmpeg_note/docs/part_2/chapter_8/: 8.1.md  README.md
ffmpeg_note/docs/part_2/chapter_9/: README.md
ffmpeg_tutorial/: .gitignore  CMakelists.txt  README.md  build.sh
ffmpeg_tutorial/demo/: audio_encoder.cpp  cmd-dir.cpp  hello.cpp  video_decoder.cpp  video_encoder.cpp  video_encoder_core.cpp
ffmpeg_tutorial/doc/: audio_encode_decode.md  video_encode_decode.md
ffmpeg_tutorial/include/: audio_encoder_core.h  io_data.h  test.h  video_decoder_core.h  video_encoder.h  video_encoder_core.h
ffmpeg_tutorial/src/: audio_encoder_core.cpp  io_data.cpp  test.cpp  video_decoder_core.cpp  video_encoder.cpp  video_encoder_core.cpp
(+66 files in other folders)
